--- a/Python/flask_mysql/crud/users_cr/templates/create.html
+++ b/Python/flask_mysql/crud/users_cr/templates/create.html
@@ -7,13 +7,21 @@
     <title>Create</title>
 </head>
 <body>
+    <h1>Add a New User</h1>
+
+    <a href="/">Home</a>
+
     <form action="/users/create" method="post">
+
         <label for='first_name'>First Name:</label>
                 <input type='text' name='first_name' id="first_name">
+
         <label for='last_name'>Last Name:</label>
                 <input type='text' name='last_name' id="last_name">
+
         <label for='email'>Email:</label>
                 <input type='text' name='email' id="email">
+
         <button>Create</button>
     </form>
 </body>
