--- a/Python/flask_mysql/crud/users_cr/templates/read_all.html
+++ b/Python/flask_mysql/crud/users_cr/templates/read_all.html
@@ -15,6 +15,7 @@
                 <th>Last Name</th>
                 <th>Email</th>
                 <th>Created At</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -25,6 +26,11 @@
                 <td>{{one_user.last_name}}</td>
                 <td>{{one_user.email}}</td>
                 <td>{{one_user.created_at}}</td>
+                <td>
+                    <a href="/users/{{one_user.id}}/show">Show | </a>
+                    <a href="/users/{{one_user.id}}/edit">Edit | </a>
+                    <a href="/users/{{one_user.id}}/destroy">Delete</a>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
