--- a/Python/flask_mysql/validation/the_recipes/flask_app/templates/my_recipes.html
+++ b/Python/flask_mysql/validation/the_recipes/flask_app/templates/my_recipes.html
@@ -7,49 +7,38 @@
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>Welcome</title>
+    <title>My Recipes</title>
 </head>
 <body>
     <div class="container">
 
         <!-- TOPBAR -->
         <div class="d-flex justify-content-between">
-            <h1>Welcome {{logged_user.first_name}}</h1>
+            <h1>{{logged_user.first_name}}'s Recipes</h1>
             <div>
-                <a href="/recipes/new">Add a Recipe</a>
-                <a href="/my_recipes">My Recipes</a>
-                <a href="/users/logout">Logout</a>
+                <a href="/dashboard">Home</a>
             </div>
         </div>
 
-        {% for message in get_flashed_messages() %}
-            <p class="text-danger">{{ message }}</p>
-        {% endfor %}
-
         <!-- ALL RECIPES LISTED -->
-        <h4>Your friends posted some recipes!</h4>
         <table class="table">
             <thead>
                 <tr>
                     <th>Name</th>
                     <th>Under 30?</th>
-                    <th>Posted By</th>
                     <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
-                {% for one_recipe in all_recipes %}
+                {% for one_recipe in logged_user.recipes %}
                 <tr>
                     <td>{{one_recipe.name}}</td>
                     <!-- 30 MINUTE Y/N -->
                     <td>{% if one_recipe.under_30 == 1 %}Yes {% else %}No {% endif %}</td>
-                    <td>{{one_recipe.planner.first_name}} {{one_recipe.planner.last_name}}</td>
                     <td>
                         <a href="/recipes/{{one_recipe.id}}">View Recipe</a>
-                        {% if one_recipe.user_id == session['user_id'] %}
                         <a href="/recipes/{{one_recipe.id}}/edit">Edit</a>
                         <a href="/recipes/{{one_recipe.id}}/delete">Delete</a>
-                        {% endif %}
                     </td>
                 </tr>
                 {% endfor %}
