--- a/CSharp/Assignments/Week1/DojoSurvey/Views/Shared/_Layout.cshtml
+++ b/CSharp/Assignments/Week1/DojoSurvey/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - DojoSurvey - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - DojoSurvey
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
