--- a/CSharp/Assignments/Week1/DojoSurvey/wwwroot/css/site.css
+++ b/CSharp/Assignments/Week1/DojoSurvey/wwwroot/css/site.css
@@ -1,3 +1,13 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
+form {
+  padding: 50px 500px;
+  gap: 10px;
+}
+
 html {
   font-size: 14px;
 }
@@ -19,4 +29,8 @@ html {
 
 body {
   margin-bottom: 60px;
+}
+
+span {
+  color: red;
 }
