--- a/CSharp/Assignments/Week1/SessionWorkshop/Views/Home/Index.cshtml
+++ b/CSharp/Assignments/Week1/SessionWorkshop/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Big Maths</h1>
+    <form action="/login" method="post">
+        <input type="text" name="NewName">
+        <input type="submit" value="Login" class="btn btn-info">
+    </form>
 </div>
