--- a/CSharp/Assignments/Week2/CRUDelicious/Views/Home/Index.cshtml
+++ b/CSharp/Assignments/Week2/CRUDelicious/Views/Home/Index.cshtml
@@ -1,8 +1,21 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@model List<Dish>;
+
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Check out some recent dishes.</p>
+
+    <div class="container mt-4">
+        <table class="table">
+            @foreach (var x in Model)
+            {
+                <tr>
+                    <a href="dishes/@x.DishId">@x.Name</a>
+                    <p>@x.Chef</p>
+                </tr>
+            }
+        </table>
+    </div>
 </div>
