--- a/CSharp/Assignments/Week2/LoginAndRegistration/Views/Home/Index.cshtml
+++ b/CSharp/Assignments/Week2/LoginAndRegistration/Views/Home/Index.cshtml
@@ -32,6 +32,7 @@
                 <input asp-for="Confirm" class="form-control">
                 <span asp-validation-for="Confirm" class="text-danger"></span>
             </div>
+            <input type="submit" class="btn btn-primary">
         </form>
     </div>
     <div class="flex-1 m-3">
